parser.c
#line 1 "/home/rich/qa/ltp-executor/parser.rl"
// SPDX-License-Identifier: GPL-3.0-or-later
/*
* Copyright (c) 2020 SUSE LLC
*/
#include <errno.h>
#include <stdlib.h>
#include <stddef.h>

#include "actors.h"
#include "executor.h"
#include "parser.h"

static void error_msg(struct actor *self, char *text)
{
	struct msg *msg = msg_alloc();
	
	msg->type = MSG_ERRO;
	msg->ptr = text;
	actor_say(self, ADDR_WRITER, msg);
}

/* Ragel finite state machine (FSM) definition for parsing commands
*
* It is much easier to understand this by looking at the state transition
* graph e.g `ragel -V -p parser.rl | dot -Tsvg | display`
*
* You may be able to guess how Ragel expressions work if you are familiar
* with regular expressions or lex, BNF etc., however note that side-effects
* (actions) can be embedded within the Ragel expressions (see
* http://www.colm.net/files/ragel/ragel-guide-6.10.pdf Chapter 3).
*/

#line 35 "/home/rich/qa/ltp-executor/parser.c"
static const int parse_start = 33;

static const int parse_en_main = 33;


#line 64 "/home/rich/qa/ltp-executor/parser.rl"


/* Holds the current state of the finite state machine
*/
static int cs;
static size_t n, id, buf_len;
static char *buf;
struct cmds *cmds;

void parser_init(void)
{
	
#line 54 "/home/rich/qa/ltp-executor/parser.c"
	{
		cs = (int)parse_start;
	}
	
#line 77 "/home/rich/qa/ltp-executor/parser.rl"
	
}

/* Feed the parsing FSM a, possibly incomplete, stream of command data. The
* state is retained between calls unless you call parser_init again
*/
void parser_feed(struct actor *self, char *str, size_t len)
{
	char *p = str, *pe = str + len;
	char *eof = NULL;
	struct msg *msg;
	
	
#line 73 "/home/rich/qa/ltp-executor/parser.c"
	{
		if ( p == pe )
			goto _test_eof;
		switch ( cs ) {
			case 33:
			goto st_case_33;
			case 0:
			goto st_case_0;
			case 1:
			goto st_case_1;
			case 2:
			goto st_case_2;
			case 3:
			goto st_case_3;
			case 4:
			goto st_case_4;
			case 5:
			goto st_case_5;
			case 6:
			goto st_case_6;
			case 7:
			goto st_case_7;
			case 8:
			goto st_case_8;
			case 9:
			goto st_case_9;
			case 10:
			goto st_case_10;
			case 11:
			goto st_case_11;
			case 12:
			goto st_case_12;
			case 13:
			goto st_case_13;
			case 14:
			goto st_case_14;
			case 15:
			goto st_case_15;
			case 16:
			goto st_case_16;
			case 17:
			goto st_case_17;
			case 18:
			goto st_case_18;
			case 19:
			goto st_case_19;
			case 20:
			goto st_case_20;
			case 21:
			goto st_case_21;
			case 22:
			goto st_case_22;
			case 23:
			goto st_case_23;
			case 24:
			goto st_case_24;
			case 25:
			goto st_case_25;
			case 26:
			goto st_case_26;
			case 27:
			goto st_case_27;
			case 28:
			goto st_case_28;
			case 29:
			goto st_case_29;
			case 30:
			goto st_case_30;
			case 31:
			goto st_case_31;
			case 32:
			goto st_case_32;
		}
		goto st_out;
		_ctr17:
		{
#line 13 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			/* TODO: Validate ID */
			id = id_to_addr(n);
		}
		
#line 156 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 43 "/home/rich/qa/ltp-executor/parser.rl"
			tester_start(self, id); }
		
#line 162 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_ctr22:
		{
#line 43 "/home/rich/qa/ltp-executor/parser.rl"
			tester_start(self, id); }
		
#line 170 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_ctr48:
		{
#line 33 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			*buf = '\0';
			buf = NULL;
			
			msg = msg_alloc();
			msg->type = MSG_CMDS;
			msg->ptr = cmds;
			
			actor_say(self, id, msg);
		}
		
#line 187 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_ctr62:
		{
#line 13 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			/* TODO: Validate ID */
			id = id_to_addr(n);
		}
		
#line 198 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 44 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			msg = msg_alloc();
			msg->type = MSG_EXEC;
			
			actor_say(self, id, msg);
		}
		
#line 209 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_ctr66:
		{
#line 44 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			msg = msg_alloc();
			msg->type = MSG_EXEC;
			
			actor_say(self, id, msg);
		}
		
#line 222 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_ctr72:
		{
#line 45 "/home/rich/qa/ltp-executor/parser.rl"
			shutdown(self); }
		
#line 230 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_ctr82:
		{
#line 37 "/home/rich/qa/ltp-executor/parser.rl"
			
			msg = msg_alloc();
			msg->type = MSG_PONG;
			actor_say(self, ADDR_WRITER, msg);
		}
		
#line 242 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st33;
		_st33:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof33;
		st_case_33:
		switch( ( (*( p))) ) {
			case 65: {
				goto _st1;
			}
			case 67: {
				goto _st8;
			}
			case 69: {
				goto _st18;
			}
			case 80: {
				goto _st28;
			}
			case 97: {
				goto _st1;
			}
			case 99: {
				goto _st8;
			}
			case 101: {
				goto _st18;
			}
			case 112: {
				goto _st28;
			}
		}
		{
			goto _ctr2;
		}
		_ctr2:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 295 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr9:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 308 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 316 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr12:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 326 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr15:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 336 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 344 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr20:
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 354 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr34:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 364 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 372 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr40:
		{
#line 66 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected symbol character");
			{goto _st33;}}
		
#line 382 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr43:
		{
#line 66 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected symbol character");
			{goto _st33;}}
		
#line 392 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 400 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr46:
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 410 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 71 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected string character");
			{goto _st33;}}
		
#line 418 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		_ctr70:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 431 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 439 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st0;
		st_case_0:
		_st0:
		cs = 0;
		goto _pop;
		_ctr1:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 456 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st1;
		_st1:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof1;
		st_case_1:
		switch( ( (*( p))) ) {
			case 76: {
				goto _st2;
			}
			case 108: {
				goto _st2;
			}
		}
		{
			goto _ctr2;
		}
		_ctr4:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 491 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st2;
		_st2:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof2;
		st_case_2:
		switch( ( (*( p))) ) {
			case 76: {
				goto _st3;
			}
			case 108: {
				goto _st3;
			}
		}
		{
			goto _ctr2;
		}
		_ctr6:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 526 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st3;
		_st3:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof3;
		st_case_3:
		switch( ( (*( p))) ) {
			case 67: {
				goto _st4;
			}
			case 99: {
				goto _st4;
			}
		}
		{
			goto _ctr2;
		}
		_ctr8:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 561 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 569 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st4;
		_st4:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof4;
		st_case_4:
		switch( ( (*( p))) ) {
			case 9: {
				goto _st5;
			}
			case 32: {
				goto _st5;
			}
		}
		if ( 11 <= ( (*( p))) && ( (*( p))) <= 12 ) {
			goto _st5;
		}
		{
			goto _ctr9;
		}
		_ctr11:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 604 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st5;
		_st5:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof5;
		st_case_5:
		switch( ( (*( p))) ) {
			case 9: {
				goto _st5;
			}
			case 32: {
				goto _st5;
			}
		}
		if ( ( (*( p))) > 12 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto _ctr13;
			}
		} else if ( ( (*( p))) >= 11 ) {
			goto _st5;
		}
		{
			goto _ctr12;
		}
		_ctr13:
		{
#line 4 "/home/rich/qa/ltp-executor/parser-common.rl"
			n = (( (*( p)))) - '0'; }
		
#line 641 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st6;
		_ctr14:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 651 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 659 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st6;
		_ctr18:
		{
#line 5 "/home/rich/qa/ltp-executor/parser-common.rl"
			n = n * 10 + ((( (*( p)))) - '0'); }
		
#line 667 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st6;
		_st6:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof6;
		st_case_6:
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr17;
			}
			case 32: {
				goto _ctr16;
			}
		}
		if ( ( (*( p))) > 12 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto _ctr18;
			}
		} else if ( ( (*( p))) >= 9 ) {
			goto _ctr16;
		}
		{
			goto _ctr15;
		}
		_ctr16:
		{
#line 13 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			/* TODO: Validate ID */
			id = id_to_addr(n);
		}
		
#line 707 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st7;
		_ctr19:
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 717 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st7;
		_st7:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof7;
		st_case_7:
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr22;
			}
			case 32: {
				goto _st7;
			}
		}
		if ( 9 <= ( (*( p))) && ( (*( p))) <= 12 ) {
			goto _st7;
		}
		{
			goto _ctr20;
		}
		_ctr23:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 755 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st8;
		_st8:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof8;
		st_case_8:
		switch( ( (*( p))) ) {
			case 77: {
				goto _st9;
			}
			case 109: {
				goto _st9;
			}
		}
		{
			goto _ctr2;
		}
		_ctr25:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 790 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st9;
		_st9:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof9;
		st_case_9:
		switch( ( (*( p))) ) {
			case 68: {
				goto _st10;
			}
			case 100: {
				goto _st10;
			}
		}
		{
			goto _ctr2;
		}
		_ctr27:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 825 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st10;
		_st10:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof10;
		st_case_10:
		switch( ( (*( p))) ) {
			case 83: {
				goto _st11;
			}
			case 115: {
				goto _st11;
			}
		}
		{
			goto _ctr2;
		}
		_ctr29:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 860 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 868 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st11;
		_st11:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof11;
		st_case_11:
		switch( ( (*( p))) ) {
			case 9: {
				goto _st12;
			}
			case 32: {
				goto _st12;
			}
		}
		if ( 11 <= ( (*( p))) && ( (*( p))) <= 12 ) {
			goto _st12;
		}
		{
			goto _ctr9;
		}
		_ctr31:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 903 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st12;
		_st12:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof12;
		st_case_12:
		switch( ( (*( p))) ) {
			case 9: {
				goto _st12;
			}
			case 32: {
				goto _st12;
			}
		}
		if ( ( (*( p))) > 12 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto _ctr32;
			}
		} else if ( ( (*( p))) >= 11 ) {
			goto _st12;
		}
		{
			goto _ctr12;
		}
		_ctr32:
		{
#line 4 "/home/rich/qa/ltp-executor/parser-common.rl"
			n = (( (*( p)))) - '0'; }
		
#line 940 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st13;
		_ctr36:
		{
#line 5 "/home/rich/qa/ltp-executor/parser-common.rl"
			n = n * 10 + ((( (*( p)))) - '0'); }
		
#line 948 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st13;
		_ctr33:
		{
#line 61 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected digit");
			{goto _st33;}}
		
#line 958 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 966 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st13;
		_st13:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof13;
		st_case_13:
		switch( ( (*( p))) ) {
			case 9: {
				goto _ctr35;
			}
			case 32: {
				goto _ctr35;
			}
		}
		if ( ( (*( p))) > 12 ) {
			if ( 48 <= ( (*( p))) && ( (*( p))) <= 57 ) {
				goto _ctr36;
			}
		} else if ( ( (*( p))) >= 11 ) {
			goto _ctr35;
		}
		{
			goto _ctr34;
		}
		_ctr35:
		{
#line 13 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			/* TODO: Validate ID */
			id = id_to_addr(n);
		}
		
#line 1006 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 18 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			cmds = malloc(sizeof(*cmds));
			
			assert_perror(errno);
			assert(cmds);
			
			buf_len = sizeof(cmds->tid);
			buf = cmds->tid;
		}
		
#line 1020 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st14;
		_ctr37:
		{
#line 66 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected symbol character");
			{goto _st33;}}
		
#line 1030 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st14;
		_st14:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof14;
		st_case_14:
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr40;
			}
			case 13: {
				goto _ctr40;
			}
			case 32: {
				goto _st14;
			}
		}
		if ( 9 <= ( (*( p))) && ( (*( p))) <= 12 ) {
			goto _st14;
		}
		{
			goto _ctr38;
		}
		_ctr38:
		{
#line 7 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			n++;
			actor_assert(n < buf_len, "%zu >= %zu", n, buf_len);
			*(buf++) = (( (*( p))));
		}
		
#line 1070 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st15;
		_ctr41:
		{
#line 66 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected symbol character");
			{goto _st33;}}
		
#line 1080 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 56 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected white space");
			{goto _st33;}}
		
#line 1088 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st15;
		_st15:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof15;
		st_case_15:
		switch( ( (*( p))) ) {
			case 10: {
				goto _ctr43;
			}
			case 13: {
				goto _ctr43;
			}
			case 32: {
				goto _ctr42;
			}
		}
		if ( 9 <= ( (*( p))) && ( (*( p))) <= 12 ) {
			goto _ctr42;
		}
		{
			goto _ctr38;
		}
		_ctr42:
		{
#line 28 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			*buf = '\0';
			buf = cmds->cmds;
		}
		
#line 1127 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st16;
		_ctr44:
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 1137 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 71 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected string character");
			{goto _st33;}}
		
#line 1145 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st16;
		_st16:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof16;
		st_case_16:
		if ( ( (*( p))) == 10 ) {
			goto _ctr46;
		}
		{
			goto _ctr45;
		}
		_ctr45:
		{
#line 7 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			n++;
			actor_assert(n < buf_len, "%zu >= %zu", n, buf_len);
			*(buf++) = (( (*( p))));
		}
		
#line 1174 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st17;
		_ctr47:
		{
#line 51 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected new line");
			{goto _st33;}}
		
#line 1184 "/home/rich/qa/ltp-executor/parser.c"
		
		{
#line 71 "/home/rich/qa/ltp-executor/parser-common.rl"
			
			error_msg(self, "Expected string character");
			{goto _st33;}}
		
#line 1192 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st17;
		_st17:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof17;
		st_case_17:
		if ( ( (*( p))) == 10 ) {
			goto _ctr48;
		}
		{
			goto _ctr45;
		}
		_ctr49:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 1222 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st18;
		_st18:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof18;
		st_case_18:
		switch( ( (*( p))) ) {
			case 88: {
				goto _st19;
			}
			case 120: {
				goto _st19;
			}
		}
		{
			goto _ctr2;
		}
		_ctr51:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 1257 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st19;
		_st19:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof19;
		st_case_19:
		switch( ( (*( p))) ) {
			case 69: {
				goto _st20;
			}
			case 73: {
				goto _st25;
			}
			case 101: {
				goto _st20;
			}
			case 105: {
				goto _st25;
			}
		}
		{
			goto _ctr2;
		}
		_ctr54:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 1298 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st20;
		_st20:
		if ( p == eof ) {
			if ( cs >= 33 )
				goto _out;
			else
				goto _pop;
		}
		p+= 1;
		if ( p == pe )
			goto _test_eof20;
		st_case_20:
		switch( ( (*( p))) ) {
			case 67: {
				goto _st21;
			}
			case 99: {
				goto _st21;
			}
		}
		{
			goto _ctr2;
		}
		_ctr56:
		{
#line 47 "/home/rich/qa/ltp-executor/parser.rl"
			
			error_msg(self, "Epected ping, allc, exit, cmds, or exec");
			/* TODO: Errors are probably most common when a user is typing
			* stuff in manually. So we can reduce some noise by clearing
			* the read buffer up to the first newline char (if any) */
			{goto _st33;}}
		
#line 1333 "/home/rich/qa/ltp-executor/parser.c"
		
		goto _st21;
		_st21:
		if ( p == eof ) {
